crates/kirin-derive-interpreter/src/snapshots/kirin_derive_interpreter__frame_build__tests__concrete_frame_enum_with_dialect_variants.snap
---
source: crates/kirin-derive-interpreter/src/frame_build.rs
assertion_line: 256
expression: "emit(input, &CONCRETE)"
---
#[automatically_derived]
impl<V, E> ::kirin_interpreter::FrameBuild<V, E> for ToyFrame<V, E> {
    fn from_block(frame: BlockFrame<V, E>) -> Self {
        Self::Block(frame)
    }
    fn from_cfg(frame: CFGFrame<V, E>) -> Self {
        Self::CFG(frame)
    }
    fn from_call(frame: CallFrame<V>) -> Self {
        Self::Call(frame)
    }
    fn from_digraph(frame: DiGraphFrame<V, E>) -> Self {
        Self::DiGraph(frame)
    }
}
