crates/kirin-derive-interpreter/src/snapshots/kirin_derive_interpreter__frame_build__tests__sparse_forward_omits_optional_digraph_when_absent.snap
---
source: crates/kirin-derive-interpreter/src/frame_build.rs
assertion_line: 268
expression: "emit(input, &SPARSE_FORWARD)"
---
#[automatically_derived]
impl<V, E, K> ::kirin_interpreter::AbstractFrameBuild<V, E, K> for ToyAbstractFrame<V, E, K> {
    fn from_block(frame: AbstractBlockFrame<V, E, K>) -> Self {
        Self::Block(frame)
    }
    fn from_call(frame: AbstractCallFrame<V, E, K>) -> Self {
        Self::Call(frame)
    }
}
